# faux-splunk-cloud

./: .env.example  .gitignore  Dockerfile  README.md  catalog-info.yaml  compose.yml  docker-compose.yml  pyproject.toml
backstage/: app-config.faux-splunk.yaml  template.yaml
backstage-plugins/faux-splunk-cloud/: package.json
backstage-plugins/faux-splunk-cloud-backend/: package.json
backstage-plugins/faux-splunk-cloud-backend/src/: index.ts  plugin.ts
backstage-plugins/faux-splunk-cloud-backend/src/service/: client.ts  index.ts  router.ts
backstage-plugins/faux-splunk-cloud/src/: api.ts  index.ts  plugin.ts  routes.ts  types.ts
backstage-plugins/faux-splunk-cloud/src/components/: EntityFauxSplunkCloudCard.tsx  FauxSplunkCloudPage.tsx  SplunkThemedContent.tsx  index.ts
backstage-plugins/faux-splunk-cloud/src/components/WorkflowEditor/: WorkflowEditor.tsx  index.ts
backstage-plugins/faux-splunk-cloud/src/components/pages/: AcsExplorerPage.tsx  AttacksPage.tsx  DashboardPage.tsx  InstanceDetailPage.tsx  InstancesPage.tsx  WorkflowsPage.tsx  index.ts
boundary/: config.hcl
concourse/: generate-keys.sh
concourse/keys/: session_signing_key  session_signing_key.pub  tsa_host_key  tsa_host_key.pub  worker_key  worker_key.pub
docs/: MINEMELD_MIGRATION.md  SPLUNK_UI_MIGRATION.md  TEST_STRATEGY.md  architecture.d2  victoria-topology.d2
guacamole/: user-mapping.xml
keycloak/: init-realm.sh
keycloak/themes/faux-splunk/login/: login.ftl  template.ftl  theme.properties
keycloak/themes/faux-splunk/login/messages/: messages_en.properties
keycloak/themes/faux-splunk/login/resources/css/: faux-splunk.css
src/faux_splunk_cloud/: __init__.py  cli.py  config.py  logging_config.py
src/faux_splunk_cloud/api/: __init__.py  app.py  deps.py  openapi.py
src/faux_splunk_cloud/api/routes/: __init__.py  acs.py  admin.py  attacks.py  audit.py  boundary.py  concourse.py  export.py  health.py  idp.py  impersonation.py  instances.py  saml.py  siem.py  vault.py  workflows.py
src/faux_splunk_cloud/api/routes/customer/: __init__.py  attacks.py  instances.py  users.py
src/faux_splunk_cloud/attack_simulation/: __init__.py  data_generators.py  kill_chain_engine.py  mitre_attack.py  threat_actors.py
src/faux_splunk_cloud/models/: __init__.py  acs.py  audit.py  boundary.py  idp_config.py  impersonation.py  instance.py  tenant.py
src/faux_splunk_cloud/services/: __init__.py  audit_service.py  auth.py  boundary_service.py  concourse_service.py  config_export_service.py  docker_orchestrator.py  impersonation_service.py  instance_export.py  instance_manager.py  keycloak.py  keycloak_admin.py  siem_service.py  splunk_client.py  tenant_service.py  vault_service.py
src/faux_splunk_cloud/templates/: docker-compose.base.yml.j2  docker-compose.distributed-minimal.yml.j2  docker-compose.infrastructure.yml  docker-compose.standalone.yml.j2  docker-compose.victoria-full.yml.j2
src/faux_splunk_cloud/templates/ansible/: playbook.yml
src/faux_splunk_cloud/templates/concourse/: pipeline.yml
src/faux_splunk_cloud/templates/defaults/: victoria-distributed.yml.j2  victoria-standalone.yml.j2
src/faux_splunk_cloud/templates/kubernetes/: splunk-standalone.yaml.j2
src/faux_splunk_cloud/templates/terraform/: main.tf.j2
src/faux_splunk_cloud/workflows/: __init__.py  engine.py  models.py  prototypes.py
terraform/: init-terraform.sh  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
terraform/keycloak/: authentication.tf  clients.tf  main.tf  outputs.tf  realm.tf  users.tf  variables.tf
terraform/vault/: auth.tf  main.tf  outputs.tf  policies.tf  secrets.tf  variables.tf
tests/: conftest.py
tests/features/: attack_simulation.feature  instance_lifecycle.feature
tests/features/steps/: attack_steps.py  conftest.py  instance_steps.py
tests/unit/: test_auth.py  test_models.py
traefik/: traefik.yml
traefik/dynamic/: tls.yml
ui/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  vite-env.d.ts
ui/src/auth/: ProtectedRoute.tsx  SAMLProvider.tsx  ThemeProvider.tsx  UserMenu.tsx  index.ts  useAuthApi.ts
ui/src/components/: SAMLWizard.tsx  SplunkViewer.tsx  ThemeToggle.tsx
ui/src/hooks/: useTenantPath.ts
ui/src/pages/: AcsExplorer.tsx  Attacks.tsx  CampaignDetail.tsx  Campaigns.tsx  CreateInstance.tsx  Dashboard.tsx  InstanceDetail.tsx  Instances.tsx  Login.tsx  Register.tsx  Scenarios.tsx  ThreatActors.tsx
ui/src/pages/admin/: AdminDashboard.tsx  ConcourseAdmin.tsx  VaultAdmin.tsx
vault/: config.hcl  init-vault.sh
